    - API changes
        - Added organization description classes 
          (org.restlet.security.Organization, User, Group). Added 
          "organizations" property to Component.
        - Added Role class and "roles" property to Application.
        - Refactored the security package introduce in 1.2 M1 based on
          community feed-back.
        - Added "roleMappings" property to Context.                             
     - Misc
        - Upgraded Simple server to version 4.1.2. 
          Contributed by Niall Gallagher.

- 1.2 Milestone 1 (2009-01-23)
    - Breaking changes
        - The engine has been moved from "com.noelios.restlet" to
          the "org.restlet.engine" package, simplifying the packaging.
        - All engine extensions have been moved to "org.restlet.ext"
          packages.
        - The com.noelios.restlet.ext.spring extension has been merged
          with org.restlet.ext.spring.
        - Moved org.restlet.util.DateUtils, ByteUtils and Engine 
          classes to org.restlet.engine.* packages.
    - Enhancements
        - Internal HTTP connector now supports HTTPS connections.
          Contributed by Kevin Conaway.
        - Added a Lucene extension including a Solr client connector
          contributed by Remi Dewitte. Also contains a useful 
          TikaRepresentation to extract metadata from a representation
          using Lucene Tika parsing and analysis library. Suggested by
          Ben Johnson.
        - The Atom Service class now supports getting documents from
          other protocols than HTTP.
        - Updated org.restlet.Component to support validating parsing. 
          Contributed by Raif S. Naffah.
        - XmlRepresentation now has "entityResolver", "errorHandler", 
          "schema", "xIncludeAware" and "validating" properties. 
          Contributed by Raif S. Naffah.
    - API changes
        - A response with a 200 (Ok) status should have an entity. Now,