@@ -18,7 +18,9 @@ Changes log
         - Added Role class and "roles" property to Application.
         - Refactored the security package introduce in 1.2 M1 based on
           community feed-back.
-        - Added "roleMappings" property to Context.                             
+        - Added "roleMappings" property to Context.
+        - Reverted represent*() auto-matching support for further 
+          discussions. Suggested by Tim Peierls.                       
      - Misc
         - Upgraded Simple server to version 4.1.2. 
           Contributed by Niall Gallagher.
